--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,18 +67,19 @@ serde = "1.0.217"
 serde_bytes = "0.11.17"
 serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
 serde_json = "1.0.135"
-# txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit", features = ["wasm"]}
-# txtx-core = { path = "../txtx/crates/txtx-core" }
-# txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm/core" }
-# txtx-addon-network-svm-types = { package = "txtx-addon-network-svm-types", path = "../txtx/addons/svm/types" }
-# txtx-gql = { path = "../txtx/crates/txtx-gql" }
-# txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui", default-features = false, features = ["bin_build"] }
-txtx-addon-kit = { version = "0.2.7", features = ["wasm"] }
-txtx-core = { version = "0.2.8" }
-txtx-addon-network-svm = { version = "0.1.12" }
-txtx-addon-network-svm-types = { version = "0.1.1" }
-txtx-gql = { version = "0.2.5" }
-txtx-supervisor-ui = { version = "0.1.3", default-features = false, features = ["crates_build"]}
+txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit", features = ["wasm"]}
+txtx-core = { path = "../txtx/crates/txtx-core" }
+txtx-addon-network-svm = { package = "txtx-addon-network-svm", path = "../txtx/addons/svm/core" }
+txtx-addon-network-svm-types = { package = "txtx-addon-network-svm-types", path = "../txtx/addons/svm/types" }
+txtx-gql = { path = "../txtx/crates/txtx-gql" }
+txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui", default-features = false, features = ["bin_build"] }
+txtx-cloud =  { path = "../txtx/crates/txtx-cloud" }
+# txtx-addon-kit = { version = "0.2.7", features = ["wasm"] }
+# txtx-core = { version = "0.2.8" }
+# txtx-addon-network-svm = { version = "0.1.12" }
+# txtx-addon-network-svm-types = { version = "0.1.1" }
+# txtx-gql = { version = "0.2.5" }
+# txtx-supervisor-ui = { version = "0.1.3", default-features = false, features = ["crates_build"]}
 bincode = "1.3.3"
 uuid = "1.15.1"
 anchor-lang-idl = { version = "0.1.2", features = ["convert"] }
