--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace.package]
-version = "0.1.15"
+version = "0.2.0"
 edition = "2021"
 description = "Surfpool is the best place to train before surfing Solana."
 license = "Apache-2.0"
@@ -68,12 +68,13 @@ spl-associated-token-account =  "6.0.0"
 # txtx-addon-network-svm-types = { package = "txtx-addon-network-svm-types", path = "../txtx/addons/svm/types" }
 # txtx-core = { path = "../txtx/crates/txtx-core" }
 # txtx-gql = { path = "../txtx/crates/txtx-gql" }
+# txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
 # txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui", default-features = false, features = ["bin_build"] }
 txtx-addon-kit = { version = "0.2.10", features = ["wasm"] }
 txtx-core = { version = "0.2.13" }
 txtx-addon-network-svm = { version = "0.1.18" }
 txtx-addon-network-svm-types = { version = "0.1.17" }
 txtx-gql = { version = "0.2.6" }
+txtx-cloud = "0.1.2"
 txtx-supervisor-ui = { version = "0.1.4", default-features = false, features = ["crates_build"]}
-txtx-cloud = "0.1.1"
 uuid = "1.15.1"
