fix(svm_tricks): properly convert bytes to hex in `svm_setAccount` rpc

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -20,6 +20,7 @@ bs58 = "0.5.1"
 chrono = "0.4"
 crossbeam = "0.8.4"
 crossbeam-channel = "0.5.14"
+hex = { workspace = true}
 hiro-system-kit = { version = "0.3.4" }
 ipc-channel = { workspace = true }
 itertools = "0.14.0"
