--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ resolver = "2"
 [workspace.dependencies]
 agave-geyser-plugin-interface = "2.2.1"
 bincode = "1.3.3"
+hex = "0.4.3"
 ipc-channel = "0.19.0"
 surfpool-core = { path = "crates/core", default-features = false }
 surfpool-gql = { path = "crates/gql", default-features = false }
@@ -69,6 +70,7 @@ spl-associated-token-account =  "6.0.0"
 # txtx-core = { path = "../txtx/crates/txtx-core" }
 # txtx-gql = { path = "../txtx/crates/txtx-gql" }
 # txtx-supervisor-ui = { path = "../txtx/crates/txtx-supervisor-ui", default-features = false, features = ["bin_build"] }
+# txtx-cloud = { path = "../txtx/crates/txtx-cloud" }
 txtx-addon-kit = { version = "0.2.10", features = ["wasm"] }
 txtx-core = { version = "0.2.13" }
 txtx-addon-network-svm = { version = "0.1.18" }
