--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -58,10 +58,10 @@ jobs:
             platform: linux
             target: x86_64-unknown-linux-gnu
             architecture: x64
-          # - os: windows-latest
-          #   platform: windows
-          #   target: x86_64-pc-windows-msvc
-          #   architecture: x64
+          - os: windows-latest
+            platform: windows
+            target: x86_64-pc-windows-msvc
+            architecture: x64
           - os: macos-latest
             platform: darwin
             target: aarch64-apple-darwin
@@ -93,6 +93,14 @@ jobs:
           nhost_region: ${{ secrets.NHOST_REGION }}
           nhost_subdomain: ${{ secrets.NHOST_SUBDOMAIN }}
           working_directory: "txtx-supervisor-ui"
+
+      # install supervisor dependencies (windows)
+      - name: "Install dotenv-cli (windows)"
+        if: matrix.os == 'windows-latest'
+        run: |
+          cd txtx-supervisor-ui
+          npm i -g dotenv-cli
+          cd ..
 
       - name: Build Supervisor UI
         run: |
@@ -157,6 +165,12 @@ jobs:
         if: matrix.os != 'windows-latest'
         run: tar -C target/${{ matrix.target }}/release -zcvf surfpool-${{ env.SHORT_TARGET_NAME }}.tar.gz surfpool
 
+      - name: Compress artifact (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: bash
+        run:
+          tar -czf surfpool-${{ env.SHORT_TARGET_NAME }}.tar.gz -C target/${{ matrix.target }}/release surfpool.exe
+
       - name: Store SHA256 Hash of Tar (Linux x64)
         if: matrix.platform == 'linux'
         id: linux_x64_sha
@@ -178,6 +192,13 @@ jobs:
       # Separate uploads to prevent paths from being preserved
       - name: Upload cargo artifacts (not windows)
         if: matrix.os != 'windows-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: surfpool-${{ env.SHORT_TARGET_NAME }}
+          path: surfpool-${{ env.SHORT_TARGET_NAME }}.tar.gz
+          
+      - name: Upload tar archive (Windows)
+        if: matrix.os == 'windows-latest'
         uses: actions/upload-artifact@v4
         with:
           name: surfpool-${{ env.SHORT_TARGET_NAME }}
