--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,4 +31,4 @@ jobs:
       - name: Build
         run: cargo build --verbose
       - name: Run tests
-        run: cargo test --all --verbose
+        run: cargo test --all --verbose --features ignore_tests_ci
