--- a/crates/types/Cargo.toml
+++ b/crates/types/Cargo.toml
@@ -32,6 +32,7 @@ uuid = { version = "1.7.0", features = ["js"] }
 blake3 = "1.8.2"
 once_cell = "1.19.0"
 serde_json = { workspace = true }
+serde_with = { workspace = true }
 
 [dev-dependencies]
 test-case = "^3.3.1"
