--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ serde_json = "1.0.135"
 serde_with = "3"
 solana-account = "2.2.1"
 solana-account-decoder = "2.2.1"
+solana-account-decoder-client-types = { version = "2.2.1" }
 solana-address-lookup-table-interface = "2.2.1"
 solana-blake3-hasher = { version = "2.2.1", features = ["serde"]}
 solana-client = "2.2.1"
