--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace.package]
-version = "0.5.0"
+version = "0.4.0"
 edition = "2021"
 description = "Surfpool is the best place to train before surfing Solana."
 license = "Apache-2.0"
@@ -22,10 +22,13 @@ resolver = "2"
 
 [workspace.dependencies]
 agave-geyser-plugin-interface = "2.2.1"
+axum = { version = "0.8.0", features = ["macros"] }
 bincode = "1.3.3"
 borsh = "1.5.5"
+bs58 = "0.5.0"
 crossbeam-channel = "0.5.15"
 hex = "0.4.3"
+hiro-system-kit = { version = "0.3.4" }
 ipc-channel = "0.19.0"
 surfpool-core = { path = "crates/core", default-features = false }
 surfpool-gql = { path = "crates/gql", default-features = false }
@@ -33,7 +36,7 @@ surfpool-mcp = { path = "crates/mcp", default-features = false }
 surfpool-subgraph = { path = "crates/subgraph", default-features = false }
 surfpool-types = { path = "crates/types", default-features = false }
 # litesvm = { path = "../litesvm/crates/litesvm", features = ["nodejs-internal"] }
-litesvm = { version = "0.6.0", features = ["nodejs-internal"] }
+litesvm = { version = "0.6.1", features = ["nodejs-internal"] }
 serde = "1.0.217"
 serde_bytes = "0.11.17"
 serde_derive = "1.0.217" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
@@ -72,6 +75,7 @@ solana-transaction-error = { version = "2.2.1", features = ["serde"]}
 solana-transaction-status = { version = "2.2.2" }
 solana-version = "2.2.1"
 spl-associated-token-account =  "6.0.0"
+spl-token = "6.0.0"
 txtx-addon-kit = { version = "0.2.12", features = ["wasm"] }
 txtx-core = { version = "0.2.14" }
 txtx-addon-network-svm = { version = "0.1.22" }
@@ -79,8 +83,11 @@ txtx-addon-network-svm-types = { version = "0.1.18" }
 txtx-gql = { version = "0.2.6" }
 txtx-supervisor-ui = { version = "0.1.6", default-features = false, features = ["crates_build"]}
 txtx-cloud = "0.1.4"
+tracing = "0.1"
 uuid = "1.15.1"
 tokio = "1.43.0"
+reqwest = { version = "0.12.18", features = ["blocking", "json"] }
+
 
 # [patch.crates-io]
 # txtx-addon-kit = { path = "../txtx/crates/txtx-addon-kit" }
