--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -65,6 +65,10 @@ jobs:
             architecture: x64
           - os: macos-latest
             platform: darwin
+            target: x86_64-apple-darwin
+            architecture: x64
+          - os: macos-latest
+            platform: darwin
             target: aarch64-apple-darwin
             architecture: arm64
 
@@ -113,8 +117,16 @@ jobs:
           echo "SDKROOT=$(xcrun -sdk macosx --show-sdk-path)" >> $GITHUB_ENV
           echo "MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version)" >> $GITHUB_ENV
 
-      - name: Configure openssl (macos)
+      - name: Configure openssl (macos x64)
         if: matrix.os == 'macos-latest' && matrix.architecture == 'x64'
+        run: |
+          brew install openssl@1.1
+          echo "OPENSSL_DIR=$(brew --prefix openssl@1.1)" >> $GITHUB_ENV
+          echo "OPENSSL_INCLUDE_DIR=$(brew --prefix openssl@1.1)/include" >> $GITHUB_ENV
+          echo "OPENSSL_LIB_DIR=$(brew --prefix openssl@1.1)/lib" >> $GITHUB_ENV
+
+      - name: Configure openssl (macos arm64)
+        if: matrix.os == 'macos-latest' && matrix.architecture == 'arm64'
         run: |
           brew install openssl@1.1
           echo "OPENSSL_DIR=$(brew --prefix openssl@1.1)" >> $GITHUB_ENV
@@ -127,6 +139,7 @@ jobs:
           brew install llvm
           echo "LIBCLANG_PATH=$(brew --prefix llvm)/lib" >> $GITHUB_ENV
           echo "BINDGEN_EXTRA_CLANG_ARGS=-I$(xcrun --show-sdk-path)/usr/include" >> $GITHUB_ENV
+          echo "LLVM_CONFIG_PATH=$(brew --prefix llvm)/bin/llvm-config" >> $GITHUB_ENV
 
       - name: Install LLVM/Clang (Linux)
         if: matrix.os == 'ubuntu-22.04'
@@ -182,8 +195,18 @@ jobs:
         run: 
           cargo build --release --locked --target ${{ matrix.target }} --features supervisor_ui --features version_check --features subgraph
 
-      - name: Build - Cargo (Unix)
-        if: matrix.os != 'windows-latest'
+      - name: Build - Cargo (macOS x64)
+        if: matrix.os == 'macos-latest' && matrix.architecture == 'x64'
+        run: 
+          cargo build --release --locked --target ${{ matrix.target }} --features supervisor_ui --features version_check --features subgraph
+
+      - name: Build - Cargo (macOS ARM64)
+        if: matrix.os == 'macos-latest' && matrix.architecture == 'arm64'
+        run: 
+          cargo build --release --locked --target ${{ matrix.target }} --features supervisor_ui --features version_check --features subgraph
+
+      - name: Build - Cargo (Linux)
+        if: matrix.os == 'ubuntu-22.04'
         run: 
           cargo build --release --locked --target ${{ matrix.target }} --features supervisor_ui --features version_check --features subgraph
 
