--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -38,7 +38,6 @@ log = "0.4.27"
 mime_guess = "2.0.4"
 mustache = "0.9.0"
 notify = { version = "8.0.0" }
-fork = "0.2.0"
 ratatui = "0.29.0"
 rust-embed = "8.2.0"
 serde = "1.0.217"
@@ -76,3 +75,6 @@ sqlite = ["surfpool-gql/sqlite"]
 postgres = ["surfpool-gql/postgres"]
 version_check = []
 subgraph = ["surfpool-core/subgraph"]
+
+[target.'cfg(not(target_os = "windows"))'.dependencies]
+fork = "0.2.0"
