--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -10,16 +10,10 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-diesel = { version = "2.2.11", default-features = false, features = [
-    "chrono",
-    "time",
-    "serde_json",
-    "uuid",
-    "r2d2",
-] }
-diesel_derives = { version = "2.2.6" }
-diesel-dynamic-schema = { version = "0.2.3" }
-libsqlite3-sys = { version = "0.30.1", features = ["bundled"], optional = true }
+diesel = { workspace = true, default-features = false, features = ["chrono", "time", "serde_json", "uuid", "r2d2"] }
+diesel-dynamic-schema = { workspace = true }
+diesel_derives = { workspace = true }
+libsqlite3-sys = { workspace = true, features = ["bundled"], optional = true }
 txtx-addon-kit = { workspace = true }
 
 [features]
@@ -31,8 +25,4 @@ sqlite = [
     "diesel-dynamic-schema/sqlite",
     "libsqlite3-sys",
 ]
-postgres = [
-    "diesel/postgres",
-    "diesel_derives/postgres",
-    "diesel-dynamic-schema/postgres",
-]
+postgres = ["diesel/postgres", "diesel_derives/postgres", "diesel-dynamic-schema/postgres"]
