--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,14 @@ categories = ["cryptography"]
 
 [workspace]
 members = [
-  "crates/cli",
-  "crates/core",
-  "crates/db",
-  "crates/gql",
-  "crates/mcp",
-  "crates/studio",
-  "crates/subgraph",
-  "crates/types",
+    "crates/cli",
+    "crates/core",
+    "crates/db",
+    "crates/gql",
+    "crates/mcp",
+    "crates/studio",
+    "crates/subgraph",
+    "crates/types",
 ]
 exclude = ["examples/hello-geyser"]
 default-members = ["crates/cli"]
@@ -63,7 +63,9 @@ indicatif = { version = "0.18.0", default-features = false }
 ipc-channel = "0.19.0"
 itertools = { version = "0.14.0", default-features = false }
 json5 = "0.4.1"
-jsonrpc-core = { version = "18.0.0", features = ["futures"], default-features = false }
+jsonrpc-core = { version = "18.0.0", features = [
+    "futures",
+], default-features = false }
 jsonrpc-core-client = { version = "18.0.0", default-features = false }
 jsonrpc-derive = "18.0.0"
 jsonrpc-http-server = "18.0.0"
@@ -75,20 +77,24 @@ juniper_codegen = { version = "0.16.0", default-features = false }
 juniper_graphql_ws = { version = "0.4.0", default-features = false }
 lazy_static = "1.5.0"
 libloading = "0.7.4"
-litesvm = { git = "https://github.com/txtx/litesvm.git", branch = "fix/relax-deps", features = ["nodejs-internal"] }
 libsqlite3-sys = { version = "0.30.1", default-features = false }
+litesvm = { git = "https://github.com/txtx/litesvm.git", branch = "fix/relax-deps", features = [
+    "nodejs-internal",
+] }
 log = "0.4.27"
 mime_guess = { version = "2.0.4", default-features = false }
 mustache = "0.9.0"
 notify = { version = "8.0.0", default-features = false }
 npm_rs = "1.0.0"
 once_cell = { version = "1.19.0", default-features = false }
-ratatui = { version = "0.29.0", features = ["crossterm"], default-features = false }
+ratatui = { version = "0.29.0", features = [
+    "crossterm",
+], default-features = false }
 reqwest = { version = "0.12.23", default-features = false }
 rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "ff71a526156e6c9409c450f71eccd6aced9bc339", package = "rmcp" }
 rust-embed = "8.2.0"
 serde = { version = "1.0.226", default-features = false }
-serde_derive = { version = "1.0.226", default-features = false }                                                                        # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
+serde_derive = { version = "1.0.226", default-features = false } # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
 serde_json = { version = "1.0.135", default-features = false }
 serde_with = { version = "3", default-features = false }
 solana-account = { version = "2.2.1", default-features = false }
@@ -151,7 +157,10 @@ surfpool-types = { path = "crates/types", default-features = false }
 txtx-addon-kit = "0.4.9"
 txtx-addon-network-svm = { version = "0.3.9" }
 txtx-addon-network-svm-types = { version = "0.3.8" }
-txtx-cloud = { version = "0.1.12", features = ["clap", "toml"], default-features = false }
+txtx-cloud = { version = "0.1.12", features = [
+    "clap",
+    "toml",
+], default-features = false }
 txtx-core = { version = "0.4.12" }
 txtx-gql = { version = "0.3.6" }
 txtx-supervisor-ui = { version = "0.2.8", default-features = false }
