--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -10,7 +10,13 @@ keywords.workspace = true
 categories.workspace = true
 
 [dependencies]
-diesel = { workspace = true, default-features = false, features = ["chrono", "time", "serde_json", "uuid", "r2d2"] }
+diesel = { workspace = true, default-features = false, features = [
+    "chrono",
+    "time",
+    "serde_json",
+    "uuid",
+    "r2d2",
+] }
 diesel-dynamic-schema = { workspace = true }
 diesel_derives = { workspace = true }
 libsqlite3-sys = { workspace = true, features = ["bundled"], optional = true }
@@ -25,4 +31,8 @@ sqlite = [
     "diesel-dynamic-schema/sqlite",
     "libsqlite3-sys",
 ]
-postgres = ["diesel/postgres", "diesel_derives/postgres", "diesel-dynamic-schema/postgres"]
+postgres = [
+    "diesel/postgres",
+    "diesel_derives/postgres",
+    "diesel-dynamic-schema/postgres",
+]
