--- a/crates/db/Cargo.toml
+++ b/crates/db/Cargo.toml
@@ -19,8 +19,13 @@ diesel = { workspace = true, default-features = false, features = [
 ] }
 diesel-dynamic-schema = { workspace = true }
 diesel_derives = { workspace = true }
-libsqlite3-sys = { workspace = true, features = ["bundled"], optional = true }
 txtx-addon-kit = { workspace = true }
+# Optional dependencies should not be included in the default feature set.
+libsqlite3-sys = { version = "0.30.1", optional = true, default-features = false, features = [
+    "bundled",
+] }
+pq-sys = { version = "0.7", optional = true, features = ["bundled"] }
+openssl-sys = { version = "0.9", optional = true, features = ["vendored"] }
 
 [features]
 default = []
@@ -35,4 +40,6 @@ postgres = [
     "diesel/postgres",
     "diesel_derives/postgres",
     "diesel-dynamic-schema/postgres",
+    "pq-sys",
+    "openssl-sys",
 ]
